# utilities

./: README.md
.github/workflows/: release.yml
fonda/: .gitignore  Cargo.toml  README.md  test-channels.yaml  test-git-editable.yaml  test-pip.yaml  test-platform-conda.yaml  test-platform-explicit.yaml  test-platform-simple.yaml  test-platform.yaml  test_os  test_os.rs
fonda/.github/workflows/: release_workflow.yml
fonda/src/: main.rs
