[package]
name = "fonda"
version = "0.1.0"
edition = "2021"
description = "To help using environment.yaml without conda"
authors = ["Luke Herbert"]
license = "MIT"

[[bin]]
name = "fonda"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fs2 = "0.4.3"
tokio = { version = "1", features = ["full"] }